change api title to javascript

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -130,7 +130,7 @@
                     <strong>Go</strong> "The Complete Developer's Guide" (Udemy)
                 </li>
                 <li>
-                    <strong>APIs</strong> "Backend Development and APIs"
+                    <strong>JavaScript</strong> "Backend Development and APIs"
                     (freeCodeCamp)
                 </li>
                 <li>
