tidy up certs page

--- a/app/templates/certificates.html
+++ b/app/templates/certificates.html
@@ -10,7 +10,7 @@
     </div>
     <!-- Top certificate has margin top 30, all the others have margin top 40 -->
     <div class="w3-container my-margin-top-30">
-        <h3>Online Data Analysis Course</h3>
+        <h3>Python: Online Data Analysis Course</h3>
         <p>"Performing data analysis using Python."</p>
         <a
             href="{{ url_for('static', filename='docs/cert-fcc-python-data-analysis-sf.pdf') }}"
@@ -26,12 +26,12 @@
         <p>
             <a
                 href="https://www.freecodecamp.org/certification/fcc011121fa-fa04-41d9-8189-0d017cab7a94/data-analysis-with-python-v7"
-                >View Data Analysis certificate on freeCodeCamp website</a
+                >View Data Analysis certificate on freeCodeCamp</a
             >
         </p>
     </div>
     <div class="w3-container my-margin-top-40">
-        <h3>Online JavaScript Course</h3>
+        <h3>JavaScript: Online DSA Course</h3>
         <p>"Implementing algorithms and data structures using JavaScript."</p>
         <a
             href="{{ url_for('static', filename='docs/cert-fcc-javascript-dsa-sf.pdf') }}"
@@ -47,12 +47,12 @@
         <p>
             <a
                 href="https://www.freecodecamp.org/certification/fcc011121fa-fa04-41d9-8189-0d017cab7a94/javascript-algorithms-and-data-structures"
-                >View JavaScript certificate on freeCodeCamp website</a
+                >View JavaScript DSA certificate on freeCodeCamp</a
             >
         </p>
     </div>
     <div class="w3-container my-margin-top-40">
-        <h3>Online C# Course</h3>
+        <h3>C#: Online Microsoft Course</h3>
         <p>
             "Comprehensive introduction to the C# programming language with
             Microsoft."
@@ -71,12 +71,12 @@
         <p>
             <a
                 href="https://freecodecamp.org/certification/fcc011121fa-fa04-41d9-8189-0d017cab7a94/foundational-c-sharp-with-microsoft"
-                >View C# certificate and exam results on freeCodeCamp website</a
+                >View C# certificate and exam results on freeCodeCamp</a
             >
         </p>
     </div>
     <div class="w3-container my-margin-top-40">
-        <h3>Online Go (Golang) Course</h3>
+        <h3>Go (Golang): Online Course</h3>
         <p>"Mastering the Go programming language."</p>
         <a
             href="{{ url_for('static', filename='docs/cert-go-grider.pdf') }}"
@@ -96,7 +96,7 @@
         </p>
     </div>
     <div class="w3-container my-margin-top-40">
-        <h3>Online Backend Development and APIs Course</h3>
+        <h3>JavaScript: Online Backend Development and APIs Course</h3>
         <p>
             "Creating microservices using JavaScript, Node, Express and
             MongoDB."
@@ -115,7 +115,7 @@
         <p>
             <a
                 href="https://freecodecamp.org/certification/fcc011121fa-fa04-41d9-8189-0d017cab7a94/back-end-development-and-apis"
-                >View API certificate and course projects on freeCodeCamp</a
+                >View JavaScript Backend Development and APIs certificate on freeCodeCamp</a
             >
         </p>
     </div>
@@ -138,7 +138,7 @@
         </a>
     </div>
     <div class="w3-container my-margin-top-40">
-        <h3>Online SQL Bootcamp</h3>
+        <h3>SQL: Online Course</h3>
         <p>"Become an expert at SQL using PostgreSQL and PgAdmin".</p>
         <a
             href="{{ url_for('static', filename='docs/cert-sql-portilla.pdf') }}"
@@ -159,7 +159,7 @@
     </div>
 
     <div class="w3-container my-margin-top-40">
-        <h3>Online Python Bootcamp</h3>
+        <h3>Python: Online Course</h3>
         <p>
             "Begin with the basics of Python and progress to creating your own
             applications and games."
