correct name for cert

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -127,7 +127,7 @@
                     (Microsoft & freeCodeCamp)
                 </li>
                 <li>
-                    <strong>Go</strong> "The Complete Developer's Guide" (Udemy)
+                    <strong>Go</strong> "Go: The Complete Developer's Guide" (Udemy)
                 </li>
                 <li>
                     <strong>JavaScript</strong> "Backend Development and APIs"
