using 'url_for' for full size cert images

--- a/app/templates/certificates.html
+++ b/app/templates/certificates.html
@@ -18,7 +18,7 @@
             rel="noopener noreferrer"
         >
             <img
-                src="../static/docs/cert-fcc-python-data-analysis-sf.png"
+                src="{{ url_for('static', filename='docs/cert-fcc-python-data-analysis-sf.png') }}"
                 alt="Data Analysis FCC certificate"
                 class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
@@ -39,7 +39,7 @@
             rel="noopener noreferrer"
         >
             <img
-                src="../static/docs/cert-fcc-javascript-dsa-sf.png"
+                src="{{ url_for('static', filename='docs/cert-fcc-javascript-dsa-sf.png') }}"
                 alt="JavaScript FCC certificate"
                 class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
@@ -63,7 +63,7 @@
             rel="noopener noreferrer"
         >
             <img
-                src="../static/docs/cert-fcc-ms-csharp-sf.png"
+                src="{{ url_for('static', filename='docs/cert-fcc-ms-csharp-sf.png') }}"
                 alt="C# Microscoft and FCC certificate"
                 class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
@@ -84,7 +84,7 @@
             rel="noopener noreferrer"
         >
             <img
-                src="../static/docs/cert-go-grider.png"
+                src="{{ url_for('static', filename='docs/cert-go-grider.png') }}"
                 alt="Go Udemy certificate"
                 class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
@@ -107,7 +107,7 @@
             rel="noopener noreferrer"
         >
             <img
-                src="../static/docs/cert-fcc-backend-api-sf.png"
+                src="{{ url_for('static', filename='docs/cert-fcc-backend-api-sf.png') }}"
                 alt="API FCC certificate"
                 class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
@@ -131,7 +131,7 @@
             rel="noopener noreferrer"
         >
             <img
-                src="../static/docs/cert-JustIT-completion-certificate.png"
+                src="{{ url_for('static', filename='docs/cert-JustIT-completion-certificate.png') }}"
                 alt="JustIT certificate"
                 class="my-certificates-image-justit w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
@@ -146,7 +146,7 @@
             rel="noopener noreferrer"
         >
             <img
-                src="../static/docs/cert-sql-portilla.png"
+                src="{{ url_for('static', filename='docs/cert-sql-portilla.png') }}"
                 alt="SQL Udemey Certificate"
                 class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
@@ -170,7 +170,7 @@
             rel="noopener noreferrer"
         >
             <img
-                src="../static/docs/cert-python-portilla.png"
+                src="{{ url_for('static', filename='docs/cert-python-portilla.png') }}"
                 alt="Python Udemy Certificate"
                 class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
