--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,7 +5,7 @@
 <main class="w3-container my-home-page-container my-home-page-limit-width">
     <div class="w3-margin-left">
         <img
-            src="../static/images/portrait.png"
+            src="{{ url_for('static', filename='images/portrait.png') }}"
             alt="hero image portrait"
             class="my-home-page-hero-images w3-round"
         />
