--- a/app/templates/project-microblog.html
+++ b/app/templates/project-microblog.html
@@ -9,7 +9,7 @@
     <strong
         >It may take some time for this Flask project to spin up as it's hosted
         on a free Render instance. It will also spin down after a period of
-        inactivity</strong
+        inactivity.</strong
     >
 </p>
 <div class="my-project-microblog-diagram-wrapper w3-margin-bottom">
