adding dates to bootcamps and courses

--- a/app/templates/certificates.html
+++ b/app/templates/certificates.html
@@ -10,7 +10,7 @@
     </div>
     <!-- Top certificate has margin top 30, all the others have margin top 40 -->
     <div class="w3-container my-margin-top-30">
-        <h3>Python: Online Data Analysis Course</h3>
+        <h3>Python: Online Data Analysis Course (October 2024)</h3>
         <p>"Performing data analysis using Python."</p>
         <a
             href="{{ url_for('static', filename='docs/cert-fcc-python-data-analysis-sf.pdf') }}"
@@ -31,7 +31,7 @@
         </p>
     </div>
     <div class="w3-container my-margin-top-40">
-        <h3>JavaScript: Online DSA Course</h3>
+        <h3>JavaScript: Online DSA Course (March 2024)</h3>
         <p>"Implementing algorithms and data structures using JavaScript."</p>
         <a
             href="{{ url_for('static', filename='docs/cert-fcc-javascript-dsa-sf.pdf') }}"
@@ -52,7 +52,7 @@
         </p>
     </div>
     <div class="w3-container my-margin-top-40">
-        <h3>C#: Online Microsoft Course</h3>
+        <h3>C#: Online Microsoft Course (February 2024)</h3>
         <p>
             "Comprehensive introduction to the C# programming language with
             Microsoft."
@@ -76,7 +76,7 @@
         </p>
     </div>
     <div class="w3-container my-margin-top-40">
-        <h3>Go (Golang): Online Course</h3>
+        <h3>Go (Golang): Online Course (January 2024)</h3>
         <p>"Mastering the Go programming language."</p>
         <a
             href="{{ url_for('static', filename='docs/cert-go-grider.pdf') }}"
@@ -96,7 +96,7 @@
         </p>
     </div>
     <div class="w3-container my-margin-top-40">
-        <h3>JavaScript: Online Backend Development and APIs Course</h3>
+        <h3>JavaScript: Online Backend Development and APIs Course (November 2023)</h3>
         <p>
             "Creating microservices using JavaScript, Node, Express and
             MongoDB."
@@ -120,7 +120,7 @@
         </p>
     </div>
     <div class="w3-container my-margin-top-40">
-        <h3>Just IT Software Development Bootcamp</h3>
+        <h3>Just IT Software Development Bootcamp (June 2023)</h3>
         <p>
             "In-person three-month intensive bootcamp focusing on Python,
             JavaScript, SQL, CSS and HTML."
@@ -138,7 +138,7 @@
         </a>
     </div>
     <div class="w3-container my-margin-top-40">
-        <h3>SQL: Online Course</h3>
+        <h3>SQL: Online Course (May 2023)</h3>
         <p>"Become an expert at SQL using PostgreSQL and PgAdmin".</p>
         <a
             href="{{ url_for('static', filename='docs/cert-sql-portilla.pdf') }}"
@@ -159,7 +159,7 @@
     </div>
 
     <div class="w3-container my-margin-top-40">
-        <h3>Python: Online Course</h3>
+        <h3>Python: Online Course (March 2023)</h3>
         <p>
             "Begin with the basics of Python and progress to creating your own
             applications and games."
