update cv. html/css ordering. warn flask spin up time

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -30,8 +30,8 @@
             <p>
                 The Just IT bootcamp focused on five popular technologies:
                 <strong>JavaScript</strong>, <strong>Python</strong>,
-                <strong>SQL</strong>, <strong>CSS</strong> and
-                <strong>HTML</strong>.
+                <strong>SQL</strong>, <strong>HTML</strong> and
+                <strong>CSS</strong>.
             </p>
         </div>
         <div
@@ -127,7 +127,8 @@
                     (Microsoft & freeCodeCamp)
                 </li>
                 <li>
-                    <strong>Go</strong> "Go: The Complete Developer's Guide" (Udemy)
+                    <strong>Go</strong> "Go: The Complete Developer's Guide"
+                    (Udemy)
                 </li>
                 <li>
                     <strong>JavaScript</strong> "Backend Development and APIs"
