--- a/app/templates/project-microblog.html
+++ b/app/templates/project-microblog.html
@@ -7,9 +7,9 @@
 </p>
 <p>
     <strong
-        >It may take some time for this Flask project to spin up as it's hosted
-        on a free Render instance. It will also spin down after a period of
-        inactivity.</strong
+        >It may take some time for this Flask web service to spin up as it's
+        hosted on a free Render instance (<span style="color:red;">approximately one minute</span>). It will
+        also spin down after a period of inactivity.</strong
     >
 </p>
 <div class="my-project-microblog-diagram-wrapper w3-margin-bottom">
@@ -22,7 +22,7 @@
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Python</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Flask</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">MongoDB</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">HTML</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">CSS</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">W3.CSS</div>
-<div class="w3-tag w3-round w3-white my-shared-technologies-tag">HTML</div>
 {% endblock %}
