--- a/app/templates/project-notes-app.html
+++ b/app/templates/project-notes-app.html
@@ -1,8 +1,11 @@
 {% extends "project-base.html" %} {% block project_written_content %}
-<p>A web based note taking app (inspired by Google Keep). The notes are stored in local storage making them persistent across sessions.</p>
+<p>
+    A web based note taking app (inspired by Google Keep). The notes are stored
+    in local storage making them persistent across sessions.
+</p>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">
     JavaScript
 </div>
-<div class="w3-tag w3-round w3-white my-shared-technologies-tag">CSS</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">HTML</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">CSS</div>
 {% endblock %}
