--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -42,10 +42,6 @@
                 such as academia, oil and gas, broadcast technology and finance.
             </p>
             <p>
-                I have used numerous programming languages throughout my career,
-                but mostly <strong>C</strong> and <strong>Perl</strong>.
-            </p>
-            <p>
                 <a
                     href="{{ url_for('static', filename='docs/Stewart-Fraser-CV.pdf') }}"
                     target="_blank"
@@ -57,56 +53,21 @@
                     >
                 </a>
             </p>
-        </div>
-        <div
-            class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
-        >
             <p>
-                Python, Flask, HTML and CSS were used to
-                <strong>build this portfolio site</strong>.
+                I have used numerous programming languages throughout my career,
+                but mostly <strong>C</strong> and <strong>Perl</strong>.
             </p>
-            <div class="my-home-flexbox-for-technology-images w3-margin-bottom">
-                <img
-                    src="{{ url_for('static', filename='images/python-removebg-preview.png') }}"
-                    class="my-home-page-technology-images"
-                    alt="python image"
-                />
-                <img
-                    src="{{ url_for('static', filename='images/flask-removebg-preview.png') }}"
-                    class="my-home-page-technology-images"
-                    alt="flask image"
-                />
-                <img
-                    src="{{ url_for('static', filename='images/html5-removebg-preview.png') }}"
-                    class="my-home-page-technology-images"
-                    alt="html image"
-                />
-                <img
-                    src="{{ url_for('static', filename='images/css3-removebg-preview.png') }}"
-                    class="my-home-page-technology-images"
-                    alt="css image"
-                />
-            </div>
             <p>
                 <a
-                    href="https://github.com/sfraser-dev/python-flask-my-portfolio-site"
+                    href="https://www.github.com/sfraser-dev"
                     target="_blank"
                     rel="noopener noreferrer"
                 >
                     <span
                         class="w3-tag w3-round w3-green my-shared-animated-tag-link"
-                        >View source code</span
-                    ></a
-                >
-            </p>
-        </div>
-        <div
-            class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
-        >
-            <p>
-                This site and all projects are
-                <strong>fully responsive</strong> and built with a
-                <strong>mobile-first</strong> design.
+                        >View GitHub</span
+                    >
+                </a>
             </p>
         </div>
         <div
@@ -150,9 +111,60 @@
                 <a href="{{ url_for('certificates_page') }}">
                     <span
                         class="w3-tag w3-round w3-green my-shared-animated-tag-link"
-                        >View Certificates</span
+                        >View certificates</span
                     >
                 </a>
+            </p>
+        </div>
+        <div
+            class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
+        >
+            <p>
+                This site and all projects are
+                <strong>fully responsive</strong> and built with a
+                <strong>mobile-first</strong> design.
+            </p>
+        </div>
+        <div
+            class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
+        >
+            <p>
+                Python, Flask, HTML and CSS were used to
+                <strong>build this portfolio site</strong>.
+            </p>
+            <div class="my-home-flexbox-for-technology-images w3-margin-bottom">
+                <img
+                    src="{{ url_for('static', filename='images/python-removebg-preview.png') }}"
+                    class="my-home-page-technology-images"
+                    alt="python image"
+                />
+                <img
+                    src="{{ url_for('static', filename='images/flask-removebg-preview.png') }}"
+                    class="my-home-page-technology-images"
+                    alt="flask image"
+                />
+                <img
+                    src="{{ url_for('static', filename='images/html5-removebg-preview.png') }}"
+                    class="my-home-page-technology-images"
+                    alt="html image"
+                />
+                <img
+                    src="{{ url_for('static', filename='images/css3-removebg-preview.png') }}"
+                    class="my-home-page-technology-images"
+                    alt="css image"
+                />
+            </div>
+            <p>
+                <a
+                    href="https://github.com/sfraser-dev/python-flask-my-portfolio-site"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                >
+                    <span
+                        class="w3-tag w3-round w3-green my-shared-animated-tag-link"
+                        >View source code</span
+                    ></a
+                >
             </p>
         </div>
     </div>
